[package]
name = "blibli_bevy2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = [
    "jpeg",
    "bevy_debug_stepping",
    "track_location",
] }
bevy-inspector-egui = "0.34.0"
bevy_egui = "0.38.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
thiserror = "2.0.17"
bytemuck = "1.17"

[profile.dev]
incremental = true
